--- a/etc/production/nginx.conf
+++ b/etc/production/nginx.conf
@@ -1,3 +1,8 @@
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+}
+
 # Listening to mobiledrums.freegeeks.nl:80
 server {
     listen      127.0.0.1:80;
@@ -11,8 +16,14 @@ server {
     # Proxy to node
     location / {
         proxy_pass http://mobiledrums.freegeeks.nl:8443;
+        proxy_redirect off;
+
+        proxy_http_version 1.1;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-NginX-Proxy true;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
     }
 }
